Salesforce CPQ/main/default/objects/OrderItemConsumptionRate__c/fields/OrderItemConsumptionSchedule__c.field-meta.xml
<CustomField>
    <fullName>OrderItemConsumptionSchedule__c</fullName>
    <inlineHelpText>This rate is a part of of this schedule.</inlineHelpText>
    <label>Order Product Consumption Schedule</label>
    <referenceTo>OrderItemConsumptionSchedule__c</referenceTo>
    <relationshipLabel>Order Product Consumption Rates</relationshipLabel>
    <relationshipName>OrderItemConsumptionRates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>