Salesforce CPQ/main/default/objects/OrderItemConsumptionRate__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <inlineHelpText>The price for usage that falls within this consumption rate&apos;s bounds.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>